# aigent

./: .gitignore  README.md  aigent-chat_2f7890c.script  aigent-test.script  pyproject.toml  requirements-test.txt
_codex/: aigent-chat_001-working_f4b16a4.script  aigent-chat_1af682c.script  claude-diagnosis.md
docs/: testing_plan.md  type_standards.md
docs/architecture/: forking_and_sessions.md
examples/: profiles.yaml  settings.yaml
examples/plugins/mock_tool/: main.py
scripts/: run_tests.sh  strict_type_check.sh
src/aigent/: __init__.py  main.py
src/aigent/core/: bus.py  engine.py  memory.py  permissions.py  persistence.py  profiles.py  prompts.py  schemas.py  tools.py
src/aigent/interfaces/: __init__.py  cli.py  commands.py
src/aigent/plugins/: __init__.py  loader.py
src/aigent/server/: api.py  lifecycle.py
static/: index.html
tests/: FINAL_TEST_REPORT.md  TEST_REPORT.md  conftest.py  test_failures_report.md
tests/e2e/: test_cli_artifacts.py  test_cli_asyncio.py  test_cli_golden.py  test_cli_web_sync.py  test_shared_session_sync.py  test_ui.py
tests/e2e/golden_files/: cli_basic_interaction.txt  cli_basic_interaction_actual.txt  cli_clean_output.txt
tests/integration/: test_live.py  test_server_startup.py  test_session_switching.py
tests/unit/: test_bus.py  test_cli_rendering.py  test_engine.py  test_history_rendering.py  test_permissions.py  test_persistence.py  test_profiles.py  test_security.py  test_server_lifecycle.py  test_websocket_logic.py
