[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aigent"
version = "0.1.0"
description = "A robust, async-first LangChain agent with CLI and Web interfaces."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "User", email = "user@example.com"}
]
dependencies = [
    "langchain==0.3.25",
    "langchain-openai==0.3.19", 
    "langchain-anthropic==0.3.15",
    "langchain-google-genai==2.0.10",
    "fastapi==0.115.9",
    "uvicorn[standard]==0.38.0",
    "pydantic==2.12.3",
    "pydantic-settings==2.11.0",
    "prompt_toolkit==3.0.48",
    "aiofiles==24.1.0",
    "httpx==0.28.1",
    "pyyaml==6.0.2",
    "rich==13.9.2",
    "python-dotenv==1.0.0" 
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-playwright>=0.4.0"
]

[project.scripts]
aigent = "aigent.main:entry_point"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py311"
