[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aigent"
version = "0.1.1"
description = "A robust, async-first LangChain agent with CLI and Web interfaces."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "User", email = "user@example.com"}
]
dependencies = [
    "langchain==0.3.25",
    "langchain-openai==0.3.19", 
    "langchain-anthropic==0.3.15",
    "langchain-google-genai==2.0.10",
    "fastapi==0.115.9",
    "uvicorn[standard]==0.38.0",
    "pydantic==2.12.3",
    "pydantic-settings==2.11.0",
    "prompt_toolkit==3.0.48",
    "aiofiles==24.1.0",
    "httpx==0.28.1",
    "pyyaml==6.0.2",
    "rich==13.9.2",
    "python-dotenv==1.0.0",
    "websockets>=12.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-playwright>=0.4.0",
    "mypy>=1.7.0",
    "pydocstyle>=6.3.0",
    "pylint>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "types-aiofiles",
    "types-requests",
    "types-PyYAML",
    "types-setuptools"
]

[project.scripts]
aigent = "aigent.main:entry_point"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "e2e: End-to-end tests requiring external services",
    "asyncio: Asyncio tests"
]

# Extremely strict mypy configuration - Religious level type checking
[tool.mypy]
python_version = "3.11"

# Core strictness settings
strict = true
warn_return_any = true
warn_unused_configs = true

# Disallow dynamic typing
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

# Additional strictness
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_concatenate = true

# Import strictness
ignore_missing_imports = false
disallow_any_unimported = true
disallow_any_decorated = true
disallow_any_explicit = false  # Allow explicit Any when absolutely needed

# Error presentation
pretty = true
show_error_codes = true
show_error_context = true
show_column_numbers = true
show_absolute_path = true

# Namespace configuration
namespace_packages = true
explicit_package_bases = true

# Per-module options for third-party libraries only
[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_core.*",
    "langchain_openai.*",
    "langchain_anthropic.*",
    "langchain_google_genai.*",
    "pydantic.*",
    "fastapi.*",
    "uvicorn.*",
    "websockets.*",
    "httpx.*",
    "prompt_toolkit.*",
    "dotenv.*",
    "rich.*",
    "pexpect.*",
    "playwright.*"
]
ignore_missing_imports = true
disallow_any_unimported = false

[tool.ruff]
line-length = 100
target-version = "py311"

# Strict docstring checking with Google style
[tool.pydocstyle]
convention = "google"
add-ignore = []  # Don't ignore anything - we want ALL docstrings
match-dir = "^(?!test).*"
match = ".*\\.py"

# Additional pylint strictness
[tool.pylint.messages-control]
enable = ["all"]
disable = [
    "C0114",  # missing-module-docstring (handled by pydocstyle)
    "R0903",  # too-few-public-methods (ok for data classes)
    "R0913",  # too-many-arguments (sometimes necessary in complex functions)
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.basic]
good-names = ["i", "j", "k", "ws", "pm", "e", "f", "id", "ok"]

# Black code formatter settings
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

# Import sorting
[tool.isort]
profile = "black"
line_length = 100
